# govtech-csg-xcg-modelpermissions

./: README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  general-issue-template.md
.github/workflows/: run-ci-tests.yaml
src/govtech_csg_xcg/modelpermissions/: __init__.py  apps.py  decorators.py  exceptions.py  handlers.py  middleware.py  patch.py  scope.py  shortcuts.py  signals.py
tests/: run_all_tests.sh
tests/testapp/: models.py  tests.py  urls.py  views.py
tests/testapp/migrations/: 0001_initial.py
tests/testapp/templates/: custom_403.html
tests/testproject/: settings_custom_403.py  settings_model_level.py  settings_object_level.py
